--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,20 +88,18 @@
     font-size: 1.25rem;
     letter-spacing: 0.3px;
     }
-/* google map styling */
-    .osaka-gmap {
-        position: relative;
-        text-align: center;
-        height: 100%;
-        width: 100%;
+/* bootstrap button black */
+    .btn-primary {
+        background-color: #000 !important;
+        color: #fff !important;
+        border: none !important;
     }
-    .osaka-gmap-iframe {
-        overflow: hidden;
-        background: none !important;
-        height: 100%;
-        width: 100%;
-        
+
+    .btn-primary:hover {
+        background-color: #333 !important;
+        color: #fff !important;
     }
+
 /* fade-in animation */
     .fade-in {
     opacity: 0;
